# INF-MGR

./: .dockerignore  .env.example  .gitignore  .prettierrc  Cargo.toml  README.md  REQUIREMENTS.md  ROADMAP.md  docker-compose.base.yml  docker-compose.test.yml  docker-compose.yml  justfile  rustfmt.toml
apps/server/: Cargo.toml  Dockerfile
apps/server/config/: config  config.toml
apps/server/config/migrations/: 20250514031804_base_app.sql  20250601010142_teachers_dashboard.sql  20250715232535_first_migration.sql  20250715232921_table_definition.sql
apps/server/html/: welcome.html
apps/server/src/: app.rs  config.rs  container.rs  lib.rs  main.rs
apps/server/src/asignatures/: domain.rs
apps/server/src/asignatures/__tests__/: mod.rs
apps/server/src/asignatures/application/: inputs.rs  interfaces.rs
apps/server/src/asignatures/application/usecases/: create.rs  update.rs
apps/server/src/asignatures/infrastructure/: dtos.rs  errors.rs  models.rs  repository.rs
apps/server/src/courses/: controllers.rs  dtos.rs  entity.rs  errors.rs  repository.rs  service.rs
apps/server/src/enrollments/: controllers.rs  dtos.rs  entity.rs  errors.rs  repository.rs  service.rs
apps/server/src/features/asignatures/: domain.rs
apps/server/src/features/asignatures/__tests__/: mod.rs  utils.rs
apps/server/src/features/asignatures/application/: interfaces.rs
apps/server/src/features/asignatures/infrastructure/: controllers.rs  dtos.rs  errors.rs  models.rs  repository.rs
apps/server/src/features/inscriptions/: domain.rs
apps/server/src/features/inscriptions/__tests__/: mod.rs
apps/server/src/features/inscriptions/application/: interfaces.rs
apps/server/src/features/inscriptions/infrastructure/: controllers.rs  dtos.rs  errors.rs  models.rs  repository.rs
apps/server/src/features/practices/: domain.rs
apps/server/src/features/practices/application/: interfaces.rs
apps/server/src/features/practices/infrastructure/: controllers.rs  dtos.rs  errors.rs  models.rs  repository.rs
apps/server/src/features/reports/: domain.rs
apps/server/src/features/reports/application/: interfaces.rs
apps/server/src/features/reports/infrastructure/: controllers.rs  dtos.rs  errors.rs  models.rs  repository.rs
apps/server/src/features/user/application/: mod.rs
apps/server/src/features/user/domain/: entity.rs  errors.rs  mod.rs  repository.rs
apps/server/src/features/user/infrastructure/: controllers.rs  errors.rs  mod.rs  models.rs  repository.rs  routes.rs
apps/server/src/features/users/: domain.rs
apps/server/src/features/users/__tests__/: mod.rs  utils.rs
apps/server/src/features/users/application/: interfaces.rs
apps/server/src/features/users/infrastructure/: controllers.rs  dtos.rs  errors.rs  models.rs  repository.rs
apps/server/src/imports/: controllers.rs  dtos.rs  service.rs
apps/server/src/inscriptions/: controllers.rs  domain.rs  dtos.rs  entity.rs  errors.rs  repository.rs  service.rs
apps/server/src/inscriptions/application/: interfaces.rs
apps/server/src/inscriptions/application/usecases/: create.rs  delete.rs  get.rs  update.rs
apps/server/src/inscriptions/infrastructure/: controllers.rs  dtos.rs  errors.rs  models.rs  repository.rs
apps/server/src/practices/: controllers.rs  domain.rs  dtos.rs  entity.rs  repository.rs  service.rs
apps/server/src/reports/: domain.rs
apps/server/src/reports/application/: mod.rs
apps/server/src/shared/: constants.rs  database.rs  di.rs  entities.rs  errors.rs  layers.rs  macros.rs  mod.rs  smtp.rs  validators.rs
apps/server/src/shared/infrastructure/: database.rs  di.rs  mod.rs
apps/server/src/shared/infrastructure/http/: extractors.rs
apps/server/src/shared/services/: errors.rs  mailer.rs  password.rs
apps/server/src/shared/services/event_queue/: events.rs  publisher.rs  sender.rs  subscriber.rs
apps/server/src/students/: domain.rs
apps/server/src/tests/: app.rs  mod.rs
apps/server/src/tests/asignatures/: mod.rs  utils.rs
apps/server/src/tests/inscriptions/: mod.rs  utils.rs
apps/server/src/tests/users/: mod.rs  utils.rs
apps/server/src/users/: controllers.rs  domain.rs  dtos.rs  entity.rs  errors.rs  repository.rs  service.rs
apps/server/src/users/__tests__/: mod.rs
apps/server/src/users/application/: inputs.rs  interfaces.rs
apps/server/src/users/infrastructure/: controllers.rs  dtos.rs  errors.rs  models.rs  repository.rs
apps/server/tools/: cli.rs  seeder.rs
apps/server/tools/seeder/: asignatures.rs  data.rs  functions.rs  main.rs  users.rs
lib/services/: Cargo.toml
lib/services/src/: errors.rs  lib.rs
lib/services/src/broker/: events.rs  publisher.rs  sender.rs  subscriber.rs
lib/services/src/event_queue/: events.rs  publisher.rs  sender.rs  subscriber.rs
lib/services/src/hasher/: mod.rs
lib/services/src/mailer/: context.rs  interface.rs  mod.rs  templates.rs
lib/services/src/printer/: mod.rs
lib/services/src/printer/templates/: authorization.typ
lib/services/src/templates/: context.rs  files.rs  handler.rs
tests/: Cargo.toml  Dockerfile  tools
tests/src/: lib.rs
tests/src/asignatures/: mod.rs  utils.rs
tests/src/courses/: mod.rs  utils.rs
tests/src/enrollments/: mod.rs  utils.rs
tests/src/imports/: mod.rs
tests/src/inscriptions/: mod.rs  utils.rs
tests/src/practices/: mod.rs  utils.rs
tests/src/users/: mod.rs  utils.rs
(+160 files in other folders)
