[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
default = []
seeder = ["dep:fake"]

[[bin]]
name = "dev-seeder"
path = "tools/seeder.rs"
required-features = ["seeder"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

sqlx = { version = "0.8.5", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "derive",
    "migrate",
] }

tokio = { version = "1.45.0", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["query"] }
axum_responses = "0.3.1"

async-trait = "0.1.88"

tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
shaku = { version = "0.6.2", features = ["thread_safe"] }
shaku_axum = "0.6.0"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
bcrypt = "0.17.0"
mailchecker = "6.0.17"

fake = { version = "4.3.0", optional = true }
