[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
default = []
seeder = ["dep:fake", "dep:rand"]

[[bin]]
name = "seeder"
path = "tools/seeder/main.rs"
required-features = ["seeder"]

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
axum = "0.8.4"
sword = { git = "https://github.com/MrRevillod/sword", branch = "dev" }

lettre = "0.11.17"
tera = "1.20.0"

chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

jsonwebtoken = "9.3.1"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

sqlx = { version = "0.8.5", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "derive",
    "migrate",
] }


tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

shaku = { version = "0.6.2", features = ["thread_safe"] }
async-trait = "0.1.88"

validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
bcrypt = "0.17.0"
mailchecker = "6.0.17"

fake = { version = "4.3.0", optional = true }
rand = { version = "0.9.1", optional = true }
thiserror = "2.0.12"

[dev-dependencies]
axum-test = "17.3.0"
rand = "0.9.1"
