[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
default = []
seeder = ["dep:fake", "dep:rand"]

[[bin]]
name = "seeder"
path = "tools/seeder/main.rs"
required-features = ["seeder"]

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }

axum = "0.8.4"
sword = { git = "https://github.com/MrRevillod/sword", branch = "dev" }

chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"

uuid = { version = "1.17.0", features = ["serde", "v4"] }
tera = "1.20.0"
lettre = "0.11.17"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

sea-query = { version = "1.0.0-rc.1", features = ["derive"] }
sqlx = { version = "0.8.5", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "derive",
    "migrate",
] }
sea-query-sqlx = { version = "0.8.0-rc.8", features = [
    "sqlx-postgres",
    "with-chrono",
    "with-uuid",
    "runtime-tokio",
    "postgres-array",
    "postgres-vector",
] }

tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

shaku = { version = "0.6.2", features = ["thread_safe"] }
async-trait = "0.1.88"

validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
bcrypt = "0.17.0"

fake = { version = "4.3.0", optional = true }
rand = { version = "0.9.1", optional = true }
thiserror = "2.0.14"

[dev-dependencies]
axum-test = "17.3.0"
rand = "0.9.1"
